# fantasybot

./: .dockerignore  .gitignore  Dockerfile  README.md  disbot.py  fantasy.py  file_manager.py  logging_config.json  main.py  pyproject.toml  pytest.ini  requirements.txt  utility.py
bet_vault/: vault.py
cogs/: CacheData.py  FantasyQuery.py  LiveGameUpdates.py  MaintainFantasy.py  MaintainVault.py  Miscellaneous.py  PlayerIDs.py  RSSHandler.py  SlapChallenge.py  TradeValue.py  TransactionsLog.py
cogs_helpers/: FantasyHelper.py  FantasyQueryHelper.py
discordauth/: .env.discord.example  challenge_config.json.example  private.json.example
exceptions/: vault_exceptions.py
persistent_data/: members.json  player_ids.csv  rss_queue.json  week_dates.json
recap/: week_10_matchup.json  week_11_matchup.json  week_12_matchup.json  week_13_matchup.json  week_14_matchup.json  week_15_matchup.json  week_16_matchup.json  week_17_matchup.json  week_2_matchup.json  week_3_matchup.json  week_4_matchup.json  week_5_matchup.json  week_6_matchup.json  week_7_matchup.json  week_8_matchup.json  week_9_matchup.json
settings/: README.md  challenge_config.json  features_config.json  trade_value_config.json
tests/: test_vault.py
yfpyauth/: .env.config.example
