[project]
name = "fantasybot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.4.0",
    "aiohttp==3.10.5",
    "aiosignal==1.3.1",
    "attrs==24.2.0",
    "bandit==1.7.9",
    "certifi==2024.8.30",
    "charset-normalizer==3.3.2",
    "colorama==0.4.6",
    "contourpy==1.3.1",
    "coverage==7.6.1",
    "cycler==0.12.1",
    "discord-py==2.4.0",
    "feedparser==6.0.11",
    "flake8==7.1.1",
    "fonttools==4.54.1",
    "frozenlist==1.4.1",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "idna==3.8",
    "imageio==2.37.0",
    "iniconfig==2.0.0",
    "kiwisolver==1.4.7",
    "markdown-it-py==3.0.0",
    "matplotlib==3.9.2",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "multidict==6.0.5",
    "myql==1.2.7",
    "natsort==8.4.0",
    "numpy==2.1.3",
    "oauthlib==3.2.2",
    "packaging==24.1",
    "pandas==2.2.3",
    "pbr==6.1.0",
    "pillow==11.0.0",
    "pluggy==1.5.0",
    "pyaml==24.7.0",
    "pycodestyle==2.12.1",
    "pyflakes==3.2.0",
    "pygments==2.18.0",
    "pyparsing==3.2.0",
    "pytest==8.3.3",
    "pytest-asyncio==1.0.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "rauth==0.7.3",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rich==13.8.0",
    "ruamel-yaml==0.18.6",
    "ruamel-yaml-clib==0.2.8",
    "ruff==0.11.10",
    "seaborn==0.13.2",
    "sgmllib3k==1.0.0",
    "six==1.16.0",
    "smmap==5.0.1",
    "stevedore==5.3.0",
    "stringcase==1.2.0",
    "tzdata==2024.2",
    "urllib3==2.2.2",
    "yahoo-oauth==2.1.0",
    "yarl==1.11.1",
    "yfpy==16.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
